# ApeX-Engine

./: CMakeLists.txt  README.md
contrib/to be included/include/glad/: glad.h
contrib/to be included/lib/: glfw3.lib
resources/Barrel/: Barrel.mtl
src/ApeX/: ApeX.h  Audio.cpp  Audio.h  AudioSource.cpp  AudioSource.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Keyboard.cpp  Keyboard.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Resource.h  Resources.h  RigidBody.cpp  RigidBody.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  TriSpin.cpp  TriSpin.h  TriangleRenderer.cpp  TriangleRenderer.h  Window.cpp  Window.h
src/demo/: TriangleRenderer.cpp  TriangleRenderer.h  main.cpp
src/demo2/: main.cpp
src/rend/: Shader.cpp
